--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>gitSkills</title>
 </head>
 <body>
-    <div>git skill index </div>
+    <div>git skill index 1</div>
+    <div>git skill index 2</div>
 </body>
 </html>
